[gd_scene load_steps=5 format=3 uid="uid://drgppym1nj5lo"]

[ext_resource type="Script" path="res://GlobalScripts/Main_Menu.gd" id="1_3xeht"]
[ext_resource type="Texture2D" uid="uid://cnbu51y8qasgj" path="res://Arta/Background.png" id="1_qqj5h"]
[ext_resource type="Theme" uid="uid://duqt24herp7yx" path="res://Arta/Butoane_Main_Men.tres" id="2_p5kei"]
[ext_resource type="FontFile" uid="uid://k1hdt5ygqgb6" path="res://Arta/UI/Salium.ttf" id="4_stxv6"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3xeht")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qqj5h")

[node name="Play" type="Button" parent="."]
layout_mode = 1
offset_left = 64.0
offset_top = 208.0
offset_right = 165.0
offset_bottom = 275.0
theme = ExtResource("2_p5kei")
text = "Play"
flat = true

[node name="Settings" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 0.094
anchor_bottom = 0.097
offset_left = 64.0
offset_top = 312.0
offset_right = 142.744
offset_bottom = 323.128
theme = ExtResource("2_p5kei")
text = "Settings"
flat = true

[node name="Quit" type="Button" parent="."]
layout_mode = 1
offset_left = 64.0
offset_top = 408.0
offset_right = 178.0
offset_bottom = 487.0
theme = ExtResource("2_p5kei")
theme_override_font_sizes/font_size = 36
text = "Quit
"
flat = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 120.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_stxv6")
theme_override_font_sizes/font_size = 66
text = "Vladutz In Aventura"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings_Canvas" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="Settings_Canvas"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -144.0
offset_right = 256.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource("2_p5kei")

[node name="Title" type="Label" parent="Settings_Canvas/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 64.0
grow_horizontal = 2
theme = ExtResource("2_p5kei")
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Close_Settings" type="Button" parent="Settings_Canvas/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_top = 8.0
offset_right = -5.0
offset_bottom = 47.0
grow_horizontal = 0
theme = ExtResource("2_p5kei")
theme_override_font_sizes/font_size = 31
text = "Close"
flat = true

[node name="Tutorial_Popup" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="Tutorial_Popup"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -144.0
offset_right = 256.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource("2_p5kei")

[node name="Title" type="Label" parent="Tutorial_Popup/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -242.5
offset_top = -32.0
offset_right = 242.5
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_p5kei")
text = "Do you want to play the tutorial?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Close_Tutorial_Popup" type="Button" parent="Tutorial_Popup/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_top = 8.0
offset_right = -5.0
offset_bottom = 47.0
grow_horizontal = 0
theme = ExtResource("2_p5kei")
theme_override_font_sizes/font_size = 31
text = "Close"
flat = true

[node name="Yes" type="Button" parent="Tutorial_Popup/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -40.0
offset_right = 87.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 31
text = "Yes"
flat = true

[node name="Button" type="Button" parent="Tutorial_Popup/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -40.0
offset_right = -22.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 31
text = "No"
flat = true

[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Settings_Canvas/Panel/Close_Settings" to="." method="_on_close_settings_pressed"]
[connection signal="pressed" from="Tutorial_Popup/Panel/Close_Tutorial_Popup" to="." method="_on_close_settings_pressed"]
